# wg-vanity-cuda

./: .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  cpp.hint
include/: base64.h  base64_encode.h  common.h  curve25519-donna.h  ed25519-donna-basepoint-table.h  ed25519-donna-impl-base.h  ed25519-donna-tables.h  ed25519-donna.h  helper.h  modm-donna.h  pubkey.h  random.h  vanity.h
src/: base64.cu  chacha8.cc  common.cc  main.cpp  pubkey.cu  vanity.cu
